--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower's matrix">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="centered-main-page-element">
@@ -27,7 +27,7 @@
             <input type="checkbox">
             <label class="task">Pay Bills</label>
             <input type="text" class="task">
-            <button class="edit">Edit</button>
+            <button class="edit" alt="delete button">Edit</button>
             <button class="delete">
               <img src="./remove.svg">
             </button>
@@ -36,7 +36,7 @@
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
+            <button class="edit" alt="delete button">Save</button>
             <button class="delete">
               <img src="./remove.svg">
             </button>
@@ -50,7 +50,7 @@
             <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
             <input type="text" class="task">
-            <button class="edit">Edit</button>
+            <button class="edit" alt="delete button">Edit</button>
             <button class="delete">
               <img src="./remove.svg">
             </button>
