--- a/index.html
+++ b/index.html
@@ -1,58 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title>Todo App</title>
+    <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower's matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower's matrix">
+      <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="topSectionForAddingElementToList">
-        <h1 class="add-caption">Add Item</h1>
-        <ul class="task-row-wrapper">
-          <li>
-            <input id="new-task" class="task" type="text">
-            <button>Add</button>
+    <main class="main">
+      <section id="add-task" class="section">
+        <h1 class="section__title">Add Item</h1>
+        <ul class="task-wrapper list">
+          <input id="new-task" class="list__item-text" type="text">
+          <button class="btn">Add</button>
+        </ul>
+      </section>
+      <section class="section">
+        <h2 class="section__title">Todo</h2>
+        <ul id="incompleted-tasks" class="list">
+          <li class="list__item">
+            <input class="list__item-checkbox" type="checkbox">
+            <label class="list__item-label">Pay Bills</label>
+            <input class="list__item-text" type="text">
+            <button class="btn btn--edit">Edit</button>
+            <button class="btn btn--delete">
+              <img class="btn__img" src="./remove.svg" alt="delete button">
+            </button>
+          </li>
+          <li class="list__item list__item--editmode">
+            <input class="list__item-checkbox" type="checkbox">
+            <label class="list__item-label">Go Shopping</label>
+            <input class="list__item-text" type="text" value="Go Shopping">
+            <button class="btn btn--edit">Save</button>
+            <button class="btn btn--delete">
+              <img class="btn__img" src="./remove.svg" alt="delete button">
+          </button>
           </li>
         </ul>
       </section>
       <section class="section">
-        <h2>Todo</h2>
-        <ul id="incompleteTasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit" alt="delete button">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg">
-            </button>
-          </li>
-          <li class="editMode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit" alt="delete button">Save</button>
-            <button class="delete">
-              <img src="./remove.svg">
-            </button>
-          </li>
-        </ul>
-      </section>
-      <section class="section">
-        <h2>Completed</h2>
-        <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit" alt="delete button">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg">
+        <h2 class="section__title">Completed</h2>
+        <ul id="completed-tasks" class="list">
+          <li class="list__item">
+            <input class="list__item-checkbox" type="checkbox" checked>
+            <label class="list__item-label">See the Doctor</label>
+            <input class="list__item-text" type="text">
+            <button class="btn--edit">Edit</button>
+            <button class="btn btn--delete">
+              <img class="btn__img" src="./remove.svg" "delete button">
             </button>
           </li>
         </ul>
