--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <main class="main">
       <section id="add-task" class="section">
         <h1 class="section__title">Add Item</h1>
-        <ul class="task-wrapper list">
-          <input id="new-task" class="list__item-text" type="text">
+        <div class="task-wrapper list">
+          <input id="new-task" class="new-task list__item-text" type="text">
           <button class="btn">Add</button>
-        </ul>
+        </div>
       </section>
       <section class="section">
         <h2 class="section__title">Todo</h2>
@@ -43,7 +43,7 @@
       </section>
       <section class="section">
         <h2 class="section__title">Completed</h2>
-        <ul id="completed-tasks" class="list">
+        <ul id="completed-tasks" class="list completed-tasks">
           <li class="list__item">
             <input class="list__item-checkbox" type="checkbox" checked>
             <label class="list__item-label">See the Doctor</label>
